RESOLVED FIXED26944
Media controls doesn't scale properly
https://bugs.webkit.org/show_bug.cgi?id=26944
Summary Media controls doesn't scale properly
Pierre d'Herbemont
Reported 2009-07-02 17:33:17 PDT
Media controls doesn't scale properly in full page zoom.
Attachments
patch v1. (6.43 KB, patch)
2009-07-02 17:39 PDT, Pierre d'Herbemont
simon.fraser: review+
Pierre d'Herbemont
Comment 1 2009-07-02 17:35:20 PDT
Pierre d'Herbemont
Comment 2 2009-07-02 17:39:34 PDT
Created attachment 32213 [details] patch v1.
Pierre d'Herbemont
Comment 3 2009-07-02 20:55:31 PDT
Note You need to log in before you can comment on or make changes to this bug.