2009-07-02  Pierre d'Herbemont  <pdherbemont@apple.com>

Reviewed by Simon Fraser.

        https://bugs.webkit.org/show_bug.cgi?id=26944

        Make sure we support full page zoom in video controls.

        This is tracked by a the video-controls-zoom test case.

        * css/mediaControlsQT.css: Make sure we don't have any inherited margin.
        * rendering/MediaControlElements.cpp:
        (WebCore::MediaControlElement::updateStyle): Propagate the style to the innertext.
        * rendering/RenderThemeMac.mm: Adjust the painting rect.
        (WebCore::getUnzoomedRectAndAdjustCurrentContext):
        (WebCore::RenderThemeMac::paintMediaSliderTrack):
        (WebCore::RenderThemeMac::paintMediaCurrentTime):
        (WebCore::RenderThemeMac::paintMediaTimeRemaining):

Canonical link: https://commits.webkit.org/37179@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@45518 268f45cc-cd09-0410-ab3c-d52691b4dbfc